--- a/t24-inbound-connector/pom.xml
+++ b/t24-inbound-connector/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.modules</groupId>
     <artifactId>t24-inbound-connector</artifactId>
-    <version>201702.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-module</packaging>
     <name>Mule T24 Inbound Anypoint Connector</name>
 
@@ -17,9 +17,10 @@
     <properties>
         <category>Community</category>
         <licensePath>LICENSE.md</licensePath>
-		<t24.version>201702.0.0</t24.version>
+		<t24.version>DEV.0.0-SNAPSHOT</t24.version>
         <!-- Maven should build the update site Zip file -->
 		<devkit.studio.package.skip>false</devkit.studio.package.skip>
+		<jdk.version>1.8</jdk.version>
 		 
         <!-- Adding CXF Support -->
         
@@ -27,14 +28,6 @@
 		<cxf.version>2.7.7</cxf.version>
 		<cxf.version.boolean>2.6.0</cxf.version.boolean>
 		 
-		<!-- Package name, WSDL file path and location in the JAR -->
-		<!--<connector.package>
-		    org.mule.modules.t24inbound.definition
-		</connector.package>
-		<connector.wsdl>
-		    ${basedir}/src/main/resources/wsdl/IntegrationFlowServiceWS.wsdl
-		</connector.wsdl>
-		<connector.wsdlLocation>classpath:wsdl/IntegrationFlowServiceWS.wsdl</connector.wsdlLocation>-->
     </properties>
     
      <dependencies>
@@ -101,12 +94,12 @@
 			<version>15.0.0.0</version>
 		</dependency>
 		
-		<!-- JBOSS CLIENT -->   	    
-		<dependency>
-		    <groupId>org.jboss</groupId>
-            <artifactId>jboss-client</artifactId>
-            <version>7.2.0</version>
-		</dependency>
+		<!-- JBOSS CLIENT -->
+		 <dependency>
+			 <groupId>org.jboss.client</groupId>
+			 <artifactId>jboss-client</artifactId>
+			 <version>7.0.0.GA-redhat-2</version>
+		 </dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.bundles.repackaged/jersey-guava-->
 		<dependency>
@@ -150,65 +143,6 @@
      <build>
 	    <plugins>
 	    
-			<!--<plugin>
-			    <groupId>org.apache.cxf</groupId>
-			    <artifactId>cxf-codegen-plugin</artifactId>
-			    <version>${cxf.version}</version>
-			    <executions>
-			        <execution>
-			            &lt;!&ndash; Note that validate phase is not the usual phase to
-			              run WSDL2Java. This is done because DevKit requires the
-			              class be generated so it can be used in generate-sources
-			              phase by DevKit. The DevKit generates code from annotations
-			              etc. and references the WSDL2Java generated output.  &ndash;&gt;
-			           
-			            <goals>
-			                <goal>wsdl2java</goal>
-			            </goals>
-			            <configuration>
-			                <wsdlOptions>
-			                    <wsdlOption>
-			                        &lt;!&ndash; WSDL File Path &ndash;&gt;
-			                        <wsdl>${connector.wsdl}</wsdl>
-			                        &lt;!&ndash; pick up the WSDL from within the JAR &ndash;&gt;
-			                        <wsdlLocation>${connector.wsdlLocation}</wsdlLocation> 
-			                        <autoNameResolution>false</autoNameResolution>
-			                        <extraargs>
-			                            &lt;!&ndash; Package Destination &ndash;&gt;
-			                            <extraarg>-p</extraarg>
-			                            &lt;!&ndash; Name of the output package specified
-			                              that follows the -p argument to wsdl2java. &ndash;&gt;
-			                            <extraarg>
-			                                ${connector.package}
-			                            </extraarg>
-			                                &lt;!&ndash; DataMapper compatibility requires that
-			                                boolean getters and setters follow naming
-			                                conventions for other getters and setters. &ndash;&gt;
-			                            <extraarg>-xjc-Xbg</extraarg>
-			                            <extraarg>-xjc-Xcollection-setter-injector</extraarg>
-			                        </extraargs>
-			                    </wsdlOption>
-			                </wsdlOptions>
-			            </configuration>
-
-			        </execution>
-			    </executions>
-			    <dependencies>
-			        &lt;!&ndash; Boolean Getters &ndash;&gt;
-			        <dependency>
-			            <groupId>org.apache.cxf.xjcplugins</groupId>
-			            <artifactId>cxf-xjc-boolean</artifactId>
-			            <version>${cxf.version.boolean}</version>
-			        </dependency>
-			        &lt;!&ndash; Collection Setters &ndash;&gt;
-			        <dependency>
-			            <groupId>net.java.dev.vcc.thirdparty</groupId>
-			            <artifactId>collection-setter-injector</artifactId>
-			            <version>0.5.0-1</version>
-			        </dependency>
-			    </dependencies>
-			</plugin>-->
-			
 			<!-- THIS PLUGIN MAKES APACHE COMMON-LANG3-3.2.2 TO WORK -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -240,14 +174,6 @@
 
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
             <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
@@ -257,7 +183,7 @@
                     <phase>package</phase>
                     <configuration>
                         <target>
-                            <copy file="${project.build.directory}/UpdateSite.zip" tofile="${project.build.directory}/${artifactId}-plugin-${version}.zip" />
+                            <copy file="${project.build.directory}/UpdateSite.zip" tofile="${project.build.directory}/${artifactId}-site-${version}.zip" />
                         </target>
                     </configuration>
                     <goals>
