--- a/t24-outbound-connector/pom.xml
+++ b/t24-outbound-connector/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.modules</groupId>
     <artifactId>t24-outbound-connector</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>201705.0.0</version>
     <packaging>mule-module</packaging>
     <name>Mule T24Outbound Anypoint Connector</name>
 
@@ -16,7 +16,7 @@
 
     <properties>
         <category>Community</category>
-		<t24.version>DEV.0.0-SNAPSHOT</t24.version>
+		<t24.version>201705.0.0</t24.version>
         <licensePath>LICENSE.md</licensePath>
         <devkit.studio.package.skip>false</devkit.studio.package.skip>
 		<jdk.version>1.8</jdk.version>
