--- a/t24-outbound-connector/pom.xml
+++ b/t24-outbound-connector/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mule.modules</groupId>
+	<groupId>com.temenos.technology.integrationframework.adapters.mule</groupId>
 	<artifactId>t24-outbound-connector</artifactId>
 	<version>201705.0.0</version>
 	<packaging>mule-module</packaging>
