--- a/t24-outbound-connector/pom.xml
+++ b/t24-outbound-connector/pom.xml
@@ -154,6 +154,12 @@
 			<artifactId>jremote</artifactId>
 			<version>15.0.0.0</version>
 		</dependency>
+<!-- tocfframework Jar -->
+	<dependency>
+		<groupId>com.temenos.technology</groupId>
+		<artifactId>tocfframework</artifactId>
+		<version>DEV.0.0-SNAPSHOT</version>
+	</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.bundles.repackaged/jersey-guava-->
 		<dependency>
@@ -183,6 +189,12 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+   <groupId>org.jencks</groupId>
+   <artifactId>jencks</artifactId>
+   <version>2.0</version>
+</dependency>
+		
 
 	</dependencies>
 
@@ -203,18 +215,23 @@
 							<include>com.temenos.technology.integrationframework:t24-adapter-common</include>
 							<!-- try to include this version of log4j -->
 							<include>org.apache.log4j:org-apache-log4j</include>
+							<include>org.springframework:spring</include>
 						</includes>
 
 					</artifactSet>
 					<relocations>
 						<relocation>
 							<pattern>org.apache.commons.lang3</pattern>
-							<shadedPattern>org.shaded.commons.lang3</shadedPattern>
+							<shadedPattern>shaded.org.commons.lang3</shadedPattern>
 						</relocation>
+						  <relocation>
+                            <pattern>org.springframework.context</pattern>
+                            <shadedPattern>shaded.org.springframework.context</shadedPattern>
+                        </relocation>
 						<!-- try to relocate old version of log4j -->
 						<relocation>
 							<pattern>org.apache.log4j</pattern>
-							<shadedPattern>org.apache.log4j.shaded</shadedPattern>
+							<shadedPattern>shaded.org.apache.log4j</shadedPattern>
 						</relocation>
 					</relocations>
 
